[project]
name = "ptnad"
version = "0.1.0"
description = "Python library for interacting with the PT NAD API"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
authors = [
    { name = "Andrey Tyulenev" }
]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
    "mkdocs",
    "mkdocs-material",
    "mkdocs-static-i18n",
    "mkdocstrings-python"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.envs.docs.scripts]
serve = "mkdocs serve"
build = "mkdocs build"
deploy = "mkdocs gh-deploy --force"